[package]
name = "vibedb"
version = "0.1.1"
edition = "2024"
description = "A Postgres proxy with built-in safety features"
license = "MIT"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
repository = "https://github.com/johannes/vibedb"
homepage = "https://github.com/johannes/vibedb"
documentation = "https://docs.rs/vibedb"
keywords = ["postgres", "proxy", "database", "safety", "sql"]
categories = ["database"]
readme = "README.md"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.15"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlparser = "0.58.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[[bin]]
name = "vibedb"
path = "src/main.rs"
